[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Joueur/UiConteur.gd" type="Script" id=1]
[ext_resource path="res://Assets/Font/CatChild_base_24.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Font/CatChild_base_12.tres" type="DynamicFont" id=3]

[sub_resource type="ImageTexture" id=2]
flags = 5
flags = 5

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 134.0
margin_right = 1280.0
margin_bottom = 518.0
alignment = 1

[node name="ImageCarte" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_left = 512.0
margin_right = 768.0
margin_bottom = 384.0
rect_min_size = Vector2( 256, 384 )
texture = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelChoixTheme" type="Label" parent="VBoxContainer"]
margin_top = 522.0
margin_right = 1280.0
margin_bottom = 552.0
custom_fonts/font = ExtResource( 2 )
text = "Choisissez un th√®me..."
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 556.0
margin_right = 1280.0
margin_bottom = 586.0
alignment = 1

[node name="LineEditTheme" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 373.0
margin_right = 873.0
margin_bottom = 30.0
rect_min_size = Vector2( 500, 30 )

[node name="OkButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 877.0
margin_right = 907.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
custom_fonts/font = ExtResource( 3 )
text = "OK"
[connection signal="pressed" from="VBoxContainer/HBoxContainer/OkButton" to="." method="_on_OkButton_pressed"]
